--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ark-explorer",
+  "name": "nordic-energy-explorer",
   "version": "3.0.0",
-  "description": "A Blockchain Explorer for ARK using Vue.js and Tailwind CSS",
-  "author": "Brian Faust",
+  "description": "A Blockchain Explorer for Nordic Energy using Vue.js and Tailwind CSS",
+  "author": "Nordic Energy",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -105,11 +105,11 @@
     "vue-template-compiler": "^2.6.11"
   },
   "bugs": {
-    "url": "https://github.com/arkecosystem/explorer/issues"
+    "url": "https://github.com/nordicenergy/explorer/issues"
   },
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/arkecosystem/explorer.git"
+    "url": "git+https://github.com/nordicenergy/explorer.git"
   }
 }
